UCF-APR2.4/ftr main/force-app/main/default/objects/UCF_S_E_Item_Code__c/UCF_S_E_Item_Code__c.object-meta.xml
<CustomObject>
    <label>UCF S&amp;E Item Code</label>
    <nameField>
        <label>UCF S&amp;E Item Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UCF S&amp;E Item Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>