UCF-APR2.4/ftr main/force-app/main/default/objects/UCF_S_E_Item_Code__c/fields/DPI_S_E__c.field-meta.xml
<CustomField>
    <fullName>DPI_S_E__c</fullName>
    <label>DPI S/E</label>
    <length>255</length>
    <type>Text</type>
</CustomField>