UCF-APR2.4/ftr main/force-app/main/default/objects/UCF_S_E_Item_Code__c/fields/Equipment_name_on_PDW__c.field-meta.xml
<CustomField>
    <fullName>Equipment_name_on_PDW__c</fullName>
    <label>Equipment name on PDW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>