UCF-APR2.4/ftr main/force-app/main/default/objects/UCF_S_E_Item_Code__c/fields/Part_number__c.field-meta.xml
<CustomField>
    <fullName>Part_number__c</fullName>
    <label>Part number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>