UCF-APR2.4/ftr main/force-app/main/default/objects/UCF_S_E_Item_Code__c/fields/Vlocity_UCF_Equipment_name__c.field-meta.xml
<CustomField>
    <fullName>Vlocity_UCF_Equipment_name__c</fullName>
    <label>Vlocity UCF Equipment name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>